<resources>
    <string name="app_name">Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="profit">Profit</string>
    <string name="spending">Spending</string>
    <string name="default_total" translatable="false">0.0</string>
    <string name="menu_item_transactions">Transactions</string>
    <string name="message_empty_field">Empty field</string>
    <string name="menu_clear">Clear</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_type">Category</string>
    <string name="hint_description">Description</string>
    <string name="label_select_category">Select category</string>
    <string name="hint_date">Date</string>
    <string name="label_select_description">Select description</string>
    <string name="button_type">Type</string>
    <string name="button_time">Time</string>
    <string name="button_total">Total</string>
    <string name="button_year">Year</string>
    <string name="button_month">Month</string>
    <string name="button_custom">Custom</string>
    <string name="hint_date_start">Start date</string>
    <string name="hint_date_finish">Finish date</string>
    <string name="select_dates">Select dates</string>
    <string name="save">Save</string>
    <string name="clean">Clean</string>
    <string name="calculator">Calculator</string>
</resources>
