<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".StatisticsActivity">

    <LinearLayout
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:elevation="5dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/widget_vertical_margin"
            android:layout_marginEnd="@dimen/widget_horizontal_margin"
            android:layout_marginStart="@dimen/widget_horizontal_margin"
            android:background="@drawable/track_selector"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/total_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:paddingBottom="@dimen/widget_vertical_margin"
                android:paddingTop="@dimen/widget_vertical_margin"
                android:text="@string/button_total" />

            <RadioButton
                android:id="@+id/year_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="@dimen/widget_vertical_margin"
                android:paddingTop="@dimen/widget_vertical_margin"
                android:text="@string/button_year" />

            <RadioButton
                android:id="@+id/month_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="@dimen/widget_vertical_margin"
                android:paddingTop="@dimen/widget_vertical_margin"
                android:text="@string/button_month" />

        </RadioGroup>

    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toolbar_bottom"
        android:layout_below="@+id/toolbar_top"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    </ListView>

    <LinearLayout
        android:id="@+id/toolbar_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:elevation="5dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/widget_vertical_margin"
            android:layout_marginEnd="@dimen/widget_horizontal_margin"
            android:layout_marginStart="@dimen/widget_horizontal_margin"
            android:background="@drawable/track_selector"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/type_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:checked="true"
                android:gravity="center"
                android:paddingBottom="@dimen/widget_vertical_margin"
                android:paddingTop="@dimen/widget_vertical_margin"
                android:text="@string/button_type" />

            <RadioButton
                android:id="@+id/time_radio_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="@dimen/widget_vertical_margin"
                android:paddingTop="@dimen/widget_vertical_margin"
                android:text="@string/button_time" />

        </RadioGroup>

    </LinearLayout>

</RelativeLayout>
